--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>クルヴァニアチャットツール(仮)</title>
+</head>
+<body>
+  <h1>クルヴァニアへようこそ</h1>
+  <p>以下はリアルタイムのDiscordチャットです：</p>
+
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
     new Crate({
         server: '1360808121873862838', // クルヴァニア国 #ルーヴァン連邦
