--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <h1>クルヴァニアへようこそ</h1>
   <p>以下はリアルタイムのDiscordチャットです：</p>
 
+<widgetbot
+    server="1360808121873862838"
+    channel="1365270888970453075"
+    width="800"
+    height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
     new Crate({
         server: '1360808121873862838', // クルヴァニア国 #ルーヴァン連邦
