--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-    new Crate({
-        server: '1360808121873862838', // クルヴァニア国 #ルーヴァン連邦
-        channel: '1365270888970453075' // #💬»メイン雑談
-    })
+embed.emit('navigate', {
+  guild: '1360808121873862838',
+  channel: '1365270888970453075'
+})
 </script>
