--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>クルヴァニアチャットツール(仮)</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      background: #f0f0f0;
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 20px;
+    }
+
+    iframe {
+      width: 90vw;
+      height: 80vh;
+      border: none;
+      max-width: 1000px;
+    }
+  </style>
 </head>
 <body>
   <h1>クルヴァニアへようこそ</h1>
   <p>以下はリアルタイムのDiscordチャットです：</p>
 
-<widgetbot
-    server="1360808121873862838"
-    channel="1365270888970453075"
-    width="800"
-    height="600"
-></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+  <!-- WidgetBot Embed -->
+  <iframe
+    src="https://e.widgetbot.io/channels/1360808121873862838/1365270888970453075"
+    allowtransparency="true"
+    frameborder="0"
+    sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+  ></iframe>
 
-embed.emit('navigate', {
-  guild: '1360808121873862838',
-  channel: '1365270888970453075'
-})
-</script>
+</body>
+</html>
